# hog_experiments

./: CMakeLists.txt  HOG.cpp  HOG.h  main.cpp
