
cmake_minimum_required(VERSION 3.3)
project(hogExperiment)
SET("OpenCV_DIR" "/opt/opencv-2.4.11/build")
SET("OpenCV_FOUND" "TRUE")
SET(OpenCV_INCLUDE_DIRS "/usr/include/opencv;/usr/include/opencv2")
SET(OpenCV_LIB_DIR "/usr/lib64")
SET(OpenCV_LIBS_DIR "/usr/lib64")
link_directories(${OpenCV_LIBS_DIR})
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_calib3d opencv_video opencv_features2d opencv_ml opencv_highgui opencv_objdetect opencv_contrib opencv_legacy opencv_gpu)
find_package( OpenCV REQUIRED )
set(SOURCE_FILES main.cpp CONSTANTS.h HOG.cpp HOG.h)
add_executable(hogExperiment ${SOURCE_FILES})
target_link_libraries (hogExperiment ${OpenCV_LIBS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")